--- a/CSS/Activiteiten.css
+++ b/CSS/Activiteiten.css
@@ -10,3 +10,9 @@
     height: 520px;
     box-shadow: 0 0 5px 0 black;
 }
+@media only screen and (max-width: 1100px) {
+    .actviteiten-img {
+        width: 360px;
+        height: 360px;
+    }
+  }
