--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -15,7 +15,6 @@ header > header {
     width: 100%;
     height: 100px;
     background-color: #447029;
-    padding: 0 10%;
     box-sizing: border-box;
 }
 body > header {
@@ -71,9 +70,28 @@ header > .content a {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.4rem;
 }
-.main-titel {
-    font-family: BROKENZ;
-    font-size: 2rem;
+header > header .main-titel {
+    position: absolute;
+    transform: translate(0,-50%);
+    left: 20%;
+    top: 25%;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 3rem;
+}
+header > header .small-logo {
+    position: absolute;
+    color: #447029;
+    width: 110px;
+    height: 110px;
+    left: 12%;
+}
+header > header .icon {
+    position: absolute;
+    color: #447029;
+    width: 50px;
+    height: 50px;
+    top: 15%;
+    left: 80%;
 }
 .page-text {
     font-family: Arial, Helvetica, sans-serif;
@@ -82,4 +100,10 @@ header > .content a {
 }
 .page-mid {
     width: 50%;
+}
+@media only screen and (max-width: 1100px) {
+    header > header .main-titel {
+        font-size: 1.5rem;
+        margin-left: 80px;
+    }
 }
