--- a/CSS/Stars.css
+++ b/CSS/Stars.css
@@ -1,19 +1,18 @@
 .rate {
-    float: left;
-    height: 46px;
-    padding: 0 10px;
+    margin-top: -20px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
 }
 .rate:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
+    width: 0;
 }
 .rate:not(:checked) > label {
-    float:right;
     width:1em;
     overflow:hidden;
     white-space:nowrap;
     cursor:pointer;
-    font-size:30px;
+    font-size: 2.5rem;
     color:#ccc;
 }
 .rate:not(:checked) > label:before {
@@ -33,3 +32,4 @@
 .rate > label:hover ~ input:checked ~ label {
     color: #c59b08;
 }
+
