--- a/CSS/ReviewsStyle.css
+++ b/CSS/ReviewsStyle.css
@@ -15,7 +15,7 @@
 input[type=button], input[type=submit] {
     color: rgb(230, 230, 230);
     font-size: 1rem;
-    background-color: gray;
+    background-color: var(--green1);
     width: 100%;
     height: 30px;
     
