--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -22,6 +22,15 @@ label {
     margin: 10px 0 0 0;
 
 }
+.radios {
+    display: flex;
+    align-items: flex-end;
+}
+input[type=radio] {
+    width: 25px;
+    height: 25px;
+    margin: 0 10px;
+}
 .form-input {
     width: 100%;
     height: 40px;
@@ -43,9 +52,13 @@ textarea {
     min-width: 100%;
     max-width: 100%;
 }
-.form-input:hover, textarea:hover {
+.form-input:hover, textarea:hover, input[type=date]:hover {
     border: 2px black solid;
     background-color: rgba(0, 0, 0, 0.061);
+}
+input[type=date] {
+    width: 40%;
+    font-size: 1.4rem;
 }
 input[type=submit] {
     font-size: 1.4rem;
