--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -26,7 +26,7 @@ label {
     display: flex;
     align-items: flex-end;
 }
-input[type=radio] {
+.radio  {
     width: 25px;
     height: 25px;
     margin: 0 10px;
