--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -39,9 +39,9 @@ label {
 }
 .form-submit {
     width: 100%;
-    padding: 30px 20%;
+    padding: 30px 10%;
     box-sizing: border-box;
-    
+    display: flex;
 }
 textarea {
     font-family: Arial, Helvetica, sans-serif;
@@ -60,12 +60,19 @@ input[type=date] {
     width: 40%;
     font-size: 1.4rem;
 }
-input[type=submit] {
+input[type=submit], .button {
     font-size: 1.4rem;
     color: rgb(230, 230, 230);
     background-color: var(--green1);
     width: 100%;
     height: 40px;
+}
+.button {
+    margin-right: 20px;
+    background-color: rgb(134, 26, 12);
+}
+input[type=submit] {
+    margin-left: 20px;
 }
 input[type=submit]:hover {
     background-color: rgb(0, 144, 0);
